objects/Invoice__x.object
<CustomObject>
    <externalDataSource>Online_Orders</externalDataSource>
    <externalName>invoice_payments</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <externalDeveloperName>custID</externalDeveloperName>
        <label>Account</label>
        <length>80</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Due_On__c</fullName>
        <externalDeveloperName>dueDate</externalDeveloperName>
        <label>Due On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_On__c</fullName>
        <externalDeveloperName>sentDate</externalDeveloperName>
        <label>Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Sort Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <externalDeveloperName>total</externalDeveloperName>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
</CustomObject>